Fixed testimonial page bug (cards were too slim, content getting cut off).

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -274,7 +274,7 @@ body {
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
-        margin: 20px;
+        margin: 10px 0px;
 
         .testimonial-card {
             position: relative;
@@ -282,13 +282,14 @@ body {
             justify-content: center;
             align-items: center;
             width: 300px;
-            height: 480px;
+            min-height: 500px;
+            height: 500px;
             margin: 20px;
             background: darken($secondary-color, 50%);
             border-radius: 10px;
 
             .content {
-                padding: 30px;
+                padding: 15px;
                 text-align: center;
 
                 .quote {
